// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`epochs Can return aggregated Epoch data 1`] = `
Object {
  "epochs_aggregate": Object {
    "aggregate": Object {
      "count": "185",
      "max": Object {
        "number": 184,
        "output": "424616166073756860",
        "transactionsCount": "40972",
      },
      "min": Object {
        "output": "2654692166740613",
        "transactionsCount": "33",
      },
      "sum": Object {
        "output": "8293029495565297000",
        "transactionsCount": "1938088",
      },
    },
  },
}
`;

exports[`epochs Can return aggregated data 1`] = `
Object {
  "epochs": Array [
    Object {
      "activeStake_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "amount": null,
          },
        },
      },
      "blocksCount": "21590",
      "blocks_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "fees": 47846.34914312181,
            "size": 868.0383047707272,
          },
          "count": "21590",
          "max": Object {
            "fees": "1377042",
            "size": "648087",
          },
          "min": Object {
            "fees": "0",
            "size": "631",
          },
          "sum": Object {
            "fees": "1033002678",
            "size": "18740947",
          },
        },
      },
      "fees": 1033002678,
      "number": 1,
    },
    Object {
      "activeStake_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "amount": "15859988643309526",
          },
        },
      },
      "blocksCount": "21627",
      "blocks_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "fees": 237477.9113145605,
            "size": 491.35959680029595,
          },
          "count": "21627",
          "max": Object {
            "fees": "498861647",
            "size": "19292",
          },
          "min": Object {
            "fees": "0",
            "size": "3",
          },
          "sum": Object {
            "fees": "5135934788",
            "size": "10626634",
          },
        },
      },
      "fees": 5135934788,
      "number": 220,
    },
  ],
}
`;

exports[`epochs Can return filtered aggregated data 1`] = `
Object {
  "epochs": Array [
    Object {
      "blocks_aggregate": Object {
        "aggregate": Object {
          "count": "3123",
        },
      },
      "fees": 1033002678,
      "number": 1,
    },
  ],
}
`;

exports[`epochs Includes protocol params in effect for the epoch - mainnet 1`] = `
Object {
  "epochs": Array [
    Object {
      "protocolParams": Object {
        "a0": 0.3,
        "coinsPerUtxoWord": null,
        "collateralPercent": null,
        "costModels": null,
        "decentralisationParam": 0.64,
        "eMax": 18,
        "extraEntropy": null,
        "keyDeposit": 2000000,
        "maxBlockBodySize": 65536,
        "maxBlockExMem": null,
        "maxBlockExSteps": null,
        "maxBlockHeaderSize": 1100,
        "maxCollateralInputs": null,
        "maxTxExMem": null,
        "maxTxExSteps": null,
        "maxTxSize": 16384,
        "maxValSize": null,
        "minFeeA": 44,
        "minFeeB": 155381,
        "minPoolCost": 340000000,
        "minUTxOValue": 1000000,
        "nOpt": 150,
        "poolDeposit": 500000000,
        "priceMem": null,
        "priceStep": null,
        "protocolVersion": Object {
          "major": 2,
          "minor": 2,
        },
        "rho": 0.003,
        "tau": 0.2,
      },
    },
  ],
}
`;

exports[`epochs Includes protocol params in effect for the epoch 1`] = `
Object {
  "epochs": Array [
    Object {
      "protocolParams": null,
    },
  ],
}
`;

exports[`epochs Returns epoch details by number 1`] = `
Object {
  "epochs": Array [
    Object {
      "adaPots": Object {
        "deposits": "739776000000",
        "fees": "4970194949",
        "reserves": "13120582265809832",
        "rewards": "151012138061367",
        "slotNo": 9676800,
        "treasury": "94812346026398",
        "utxo": "31632848503907452",
      },
      "blocksCount": "21627",
      "fees": 5135934788,
      "lastBlockTime": "2020-10-02T21:44:19Z",
      "number": 220,
      "output": "12708523642248888",
      "startedAt": "2020-09-27T21:44:51Z",
      "transactionsCount": "19534",
    },
  ],
}
`;

exports[`epochs Returns epoch details by number range 1`] = `
Object {
  "epochs": Array [
    Object {
      "adaPots": null,
      "blocksCount": "21590",
      "fees": 1033002678,
      "lastBlockTime": "2017-10-03T21:44:31Z",
      "number": 1,
      "output": "101402912214214220",
      "startedAt": "2017-09-28T21:44:51Z",
      "transactionsCount": "12870",
    },
  ],
}
`;
